# nandir

./: .gitignore  LICENSE  README.md  pyproject.toml
data/synth_data/: Be.npz  Be_mag.npz  Bn.npz  Bn_mag.npz  Bu.npz  Bu_mag.npz  GeB_mag.npz  GnB_mag.npz  GuB_mag.npz  LTL.npz  eta.npz  eta_model.npz  m_true.npz  xi.npz  xi_model.npz
nandir/: __init__.py  problem.py  solver.py
nandir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: examples.py  generate_synth_data.py
tests/: test_solver.py
